2004-01-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/txinfo29.test: Remove autom4te.cache.
	Report from Greg Schafer.

	* lib/install-sh: Do not use "$@" in a context where it may be empty,
	for the sake of OSF1/Tru64's shell.
	Report from He Li.

2004-01-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac, NEWS: Bump version to 1.8.1a.

	* configure.ac, NEWS: Bump version to 1.8.1.

	* lib/config.sub, lib/config.guess, lib/texinfo.tex: New upstream
	versions.

	* m4/as.m4, m4/depend.m4, m4/maintainer.m4, m4/multi.m4: Update
	copyright years and serial.

	* m4/python.m4 (_AM_PYTHON_INTERPRETER_LIST): Add python2.4.

2004-01-10  Peter Eisentraut  <peter_e@gmx.net>  (tiny change)

	* m4/as.m4 (AM_PROG_AS): Format and align help string more
	consistently.
	* m4/depend.m4 (AM_DEP_TRACK): Likewise.
	* m4/lispdir.m4 (AM_PATH_LISPDIR): Likewise.
	* m4/maintainer.m4 (AM_MAINTAINER_MODE): Likewise.
	* m4/multi.m4 (AM_ENABLE_MULTILIB): Likewise.

2004-01-10  Paul Eggert  <eggert@twinsun.com>

	* m4/lispdir.m4 (AM_PATH_LISPDIR): Don't use \? in sed regular
	expressions; it doesn't conform to POSIX.

2004-01-10  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (shadow_unconditionally): New function...
	(handle_source_transform): ... extracted from here.
	(am_install_var): Use shadow_unconditionally to define %DISTVAR%.
	* lib/am/data.am, lib/am/java.am, lib/am/lisp.am, lib/am/python.am,
	lib/am/script.am: Add %DISTVAR% to DIST_COMMON.
	* tests/cond33.test: Make sure all conditional files are distributed.
	Report from Ralf Corsepius.

2004-01-08  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/mkdirp.m4 (AM_PROG_MKDIR_P): Append `.' to $(mkdir_p).
	* lib/install-sh: Accept `install-sh -d' with 0..n arguments,
	as well as `install-sh sources... dest' with multiple sources.
	* tests/cond33.test: New file.
	* tests/instsh2.test: Add more checks for install-sh.
	* tests/transform.test: Test for installdirs.
	* tests/Makefile.am (TESTS): Add cond33.test