@@ -52,6 +52,7 @@ install-%DIR%PYTHON: $(%DIR%_PYTHON)
 	done; \
 ## Byte-compile must be done at install time, since file times are
 ## encoded in the actual files.
+	test -z "$$dlist" || \
 	PYTHON=$(PYTHON) $(py_compile) --basedir $(DESTDIR)$(%NDIR%dir) $$dlist
 endif %?INSTALL%
 
