@@ -1,9 +1,9 @@
 #!/bin/sh
 # py-compile - Compile a Python program
 
-scriptversion=2003-11-09.01
+scriptversion=2004-01-12.23
 
-# Copyright (C) 2000, 2001, 2003  Free Software Foundation, Inc.
+# Copyright (C) 2000, 2001, 2003, 2004  Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -36,12 +36,12 @@ fi
 basedir=
 
 case "$1" in
-  '')
-    echo "$0: No files given.  Try \`$0 --help' for more information." 1>&2
-    exit 1
-    ;;
   --basedir)
     basedir=$2
+    if test -z "$basedir"; then
+      echo "$0: Missing argument to --basedir." 1>&2
+      exit 1
+    fi
     shift 2
     ;;
   -h|--h*)
@@ -60,6 +60,11 @@ EOF
     exit 0
     ;;
 esac
+
+if [ $# = 0 ]; then
+    echo "$0: No files given.  Try \`$0 --help' for more information." 1>&2
+    exit 1
+fi
 
 # if basedir was given, then it should be prepended to filenames before
 # byte compilation.
