@@ -1,6 +1,11 @@
 Bug fixed in 1.8.1a:
 
-* Nothing yet.
+* A (well known) portability bug slipped in the changes made to
+  install-sh in Automake 1.8.1.  The broken install-sh would refuse to
+  install anything on Tru64.
+
+* Fix install rules for conditionally built python files.  (This never
+  really worked.)
 
 Bug fixed in 1.8.1:
 
