@@ -1,5 +1,13 @@
 2004-01-12  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* lib/py-compile: Check input files after option processing.
+	Ensure --basedir has an argument.
+	* lib/am/python.am (install-%DIR%PYTHON): Do not run py-compile
+	if nothing was installed.
+	* tests/python10.test: New file.
+	* tests/Makefile.am (TESTS): Add python10.test.
+	Suggested by Sander Niemeijer.
+
 	* tests/txinfo29.test: Remove autom4te.cache.
 	Report from Greg Schafer.
 
